--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
             "name": "libs.js",
             "destination": "Scripts/"
         },
-        "Styling": {
+        "styling": {
             "name": "libs.css",
             "destination" : "Content/"
         }
