Minor configuration changes

--- a/gulp-config.json
+++ b/gulp-config.json
@@ -23,6 +23,6 @@
             "destination" : "Content/"
         }
     },
-    "images": "Images/*.png",
-    "imagesDestination": "images"
+    "images": "Content/images/*.png",
+    "imagesDestination": "Content/images"
 }
